# seahash-fork

./: Cargo.toml  README.md
src/: buffer.rs  stream.rs
